chainsaw/tests/pod-already-has-a-team-label-with-a-different-value/resources.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    team: alpha
  name: test
spec: 
  containers:
  - name: ubuntu
    image: ubuntu:latest
    command: ["sleep", "3600"]
  terminationGracePeriodSeconds: 0
