chainsaw/tests/pod-already-has-a-team-label-with-a-different-value/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: pod-already-has-a-team-label-with-a-different-value
spec:
  steps:
  - try:
    - apply:
        file: resources.yaml
    - assert:
        resource:
          apiVersion: v1
          kind: Pod
          metadata:
            name: test
            (labels != null): true
    - assert:
        resource:
          apiVersion: v1
          kind: Pod
          metadata:
            name: test
            (length(keys(labels)) == `1`): true
            (labels.team == 'alpha'): true
